selfie flicker fix... atempt 2

--- a/app/assets/stylesheets/custom/aboutme.css.scss
+++ b/app/assets/stylesheets/custom/aboutme.css.scss
@@ -10,7 +10,7 @@
 		margin-top: -100px;
 		border-radius: 100%;
 		border: 20px solid white;
-		background-color: white;
+		background-color: rgb(175, 214, 244);
 		background-image: image-url('selfie.jpg');
 		background-size: cover;
 		background-position: center;
